# ObjectTracking

./: Blob  Blob_Vid  CMakeCache.txt  CMakeLists.txt  CannyEdge  DisplayImage  Makefile  TemplateTrack  blob.cpp  blobEx.cpp  blob_vid.cpp  canny_edge.cpp  cmake_install.cmake  face_detect.cpp  kernelTrackNode.cpp
.CMakeFiles/: Makefile.cmake  Makefile2  TargetDirectories.txt
.CMakeFiles/Blob_Vid.dir/: CXX.includecache  DependInfo.cmake  depend.make
.CMakeFiles/CannyEdge.dir/: CXX.includecache  cmake_clean.cmake
.CMakeFiles/DisplayImage.dir/: CXX.includecache  DependInfo.cmake  cmake_clean.cmake  link.txt
.CMakeFiles/FaceDetect.dir/: DependInfo.cmake  build.make  link.txt
.CMakeFiles/TemplateTrack.dir/: CXX.includecache  DependInfo.cmake  depend.make
